   * Lua side, unit_type, and unit attack proxies can now be compared with ==
     with identity semantics. (Previously, each time such a proxy was obtained,
     it would produce a new object that did not compare equal to any others.)
   * Lua dialog functions now support the stacked widget and the unit preview pane
   * New wesnoth.show_menu function shows a dropdown menu at the mouse location
   * Lua attack proxy has new read_only field which is true for unit_type attacks
     If true, attempts to change the attack will result in an error.
   * The name field in Lua attack proxy is now writable
   * The attacks field in the Lua unit proxy is now writable
     Specifically, attacks may be replaced, appended (by assigning a new ID or
     the next valid index), or removed (by setting a field to nil).
   * wesnoth.show_message_dialog supports second_portrait and second_mirror keys
     in its first argument, which produces a dialog with two portraits.
   * The callable userdata returned by wesnoth.textdomain can now be called with
     an additional two parameters (a plural string and a count) in order to support
     gettext plurals.
   * New matches function in team and unit attack metatables, which test if the
     side or weapon matches a filter.
* Networking
   * Ported campaignd to use boost.asio instead of SDL_net.
   * Removed unit tests for old networking stack. This was the last part that
   depended on SDL_net
* Performance:
   * When a heuristic determines that it's probably faster, the game predicts
     battle
     outcome by simulating a few thousand fights instead of calculating exact
     probabilities. This method is inexact, but in very complex battles
     (extremely high HP, drain, slow, berserk, etc.) it's significantly faster than the
     default damage calculation method.
* Miscellaneous and bug fixes:
   * A new way to make units invulnerable for debugging: select the unit and type